# investment_monitoring

./: .gitignore  PortfolioLab.jsx  README.md  check_dynamo.py  pyproject.toml  requirements.txt  run.ps1  run.sh
backend/: database.py  main.py
frontend/: index.html  login.html
frontend/static/css/: style.css
frontend/static/js/: app.js
